Adding SEO/Meta

--- a/404.html
+++ b/404.html
@@ -1,4 +1,17 @@
-<!DOCTYPE html><html><head><title>Jakeoid &mdash; 404</title><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="description" content="Hi, im Jakeoid. I develop and design things in Australia."><meta name="theme-color" content="#1d1d1d"><meta name="author" content="Jakeoid"><meta name="og:type" content="website"><meta name="og:title" content="Jakeoid"><meta name="og:description" content="Hi, im Jakeoid. I develop and design things in Australia."><meta name="og:image" content="https://jakeoid.com/img/meta-icon.png"><meta name="twitter:card" content="summary"><meta name="twitter:site" content="@jakeoid_"><meta name="twitter:title" content="jakeoid.com"><meta name="twitter:description" content="Hi, im Jakeoid. I develop and design things in Australia."><meta name="twitter:image" content="https://jakeoid.com/img/meta-icon.png"><link rel="stylesheet" href="/css/stylesheet.css"><link rel="icon" type="image/png" href="/img/favicon.png"></head><body><header><div class="brand"><svg version="1.1" id="score"><rect class="cls-1" width="50" height="15"></rect></svg></div><h1><a href="/">jakeoid.com</a></h1><h2>I develop &amp; design.</h2></header><p>Sorry that content cant be found!</p><section><a href="https://github.com/jakeoid"><label>github;</label></a>
+<!DOCTYPE html><html><head><title>Jakeoid &mdash; 404</title><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width, initial-scale=1"><meta name="description" content="Hi, im Jakeoid. I develop and design things in Australia."><meta name="theme-color" content="#1d1d1d"><meta name="author" content="Jakeoid"><meta name="og:type" content="website"><meta name="og:title" content="Jakeoid"><meta name="og:description" content="Hi, im Jakeoid. I develop and design things in Australia."><meta name="og:image" content="https://jakeoid.com/img/meta-icon.png"><meta name="twitter:card" content="summary"><meta name="twitter:site" content="@jakeoid_"><meta name="twitter:title" content="jakeoid.com"><meta name="twitter:description" content="Hi, im Jakeoid. I develop and design things in Australia."><meta name="twitter:image" content="https://jakeoid.com/img/meta-icon.png"><link rel="stylesheet" href="/css/stylesheet.css"><link rel="icon" type="image/png" href="/img/favicon.png"><script type="application/ld+json">{
+"@context": "http://schema.org",
+"@type": "Organization",
+"name": "Jakeoid",
+"url": "http://www.jakeoid.com",
+"logo": "http://www.jakeoid.com/img/meta-icon.png",
+"description": "I develop and design things in Australia.",
+"email": "mailto:jake@jakeoid.com",
+"sameAs" : [ "https://twitter.com/jakeoid_",
+"https://github.com/jakeoid",
+"https://www.instagram.com/jakeoid/",
+"https://twitch.tv/jakeoid"]
+}
+</script></head><body><header><div class="brand"><svg version="1.1" id="score"><rect class="cls-1" width="50" height="15"></rect></svg></div><h1><a href="/">jakeoid.com</a></h1><h2>I develop &amp; design.</h2></header><p>Sorry that content cant be found!</p><section><a href="https://github.com/jakeoid"><label>github;</label></a>
 <a href="https://twitter.com/jakeoid_"><label>twitter;</label></a>
 <a href="https://keybase.io/jakeoid"><label>keybase;</label></a>
 <a href="/projects"><label>projects;</label></a>
